<resources>
    <string name="app_name">Yelp for Android</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="title_activity_historico">Histórico</string>
    <string name="title_activity_creditos">Créditos</string>
    <string name="title_activity_busca">Salvador</string>

    <string name="text_activity_creditos">Aplicativo desenvolvido por:</string>
    <string name="dev1">Alan Atta</string>
    <string name="dev2">Lucas Almeida</string>
    <string name="dev3">Marcos Ricardo</string>
    <string name="dev4">Mateus Barreto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="API_KEY">L3PFu3mJdn9iUyiW1mVm36shVCZwdeQx8lyMme6xzMY-CltrFf-joJbj2nK55BRaWA5-tTlVV1jrzXU50vTkHiWaG5KMLBkFyccXsQy2MswrGllwck9_2s34MZUtWnYx</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_desenvolvedor_list">Créditos</string>
    <string name="title_desenvolvedor_detail">Desenvolvedor Detail</string>
</resources>
